overflow text fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,16 +47,18 @@ textarea, input {
   padding: .5%;
   border-radius: 5px;
   border: 1px solid #ccc;
+  overflow: auto;
 }
 
 textarea:focus, input:focus {
   outline: none;
-  border: 1px solid #3486eb;
+  border: 1px solid #FF9933;
 }
 
 textarea {
   min-width: 40%;
   min-height: 100px;
+  overflow: auto;
 }
 
 form > div {
